my full app is too much lag fixt it add smoth animation and also add smo

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,6 +8,9 @@ body {
 }
 
 @layer base {
+  html {
+    scroll-behavior: smooth;
+  }
   :root, .light {
     --background: 240 10% 99%;
     --foreground: 240 5.1% 45.1%; /* #71717A */
@@ -253,6 +256,24 @@ body {
              border-color: hsla(217, 32.6%, 17.5%, 0.3);
         }
     }
+    .custom-scrollbar::-webkit-scrollbar {
+        width: 8px;
+    }
+
+    .custom-scrollbar::-webkit-scrollbar-track {
+        background-color: transparent;
+    }
+
+    .custom-scrollbar::-webkit-scrollbar-thumb {
+        background-color: hsl(var(--primary) / 0.5);
+        border-radius: 10px;
+        border: 2px solid transparent;
+        background-clip: content-box;
+    }
+
+    .custom-scrollbar::-webkit-scrollbar-thumb:hover {
+        background-color: hsl(var(--primary));
+    }
 }
 
 @layer base {
@@ -273,3 +294,4 @@ body {
 
 
     
+
